# embcrusted

./: Cargo.toml  LICENSE  README.md
embcrusted-ui/: Cargo.toml
embcrusted-ui-no-std/: .gitignore  Cargo.toml
embcrusted-ui-no-std/src/: main.rs
embcrusted-ui/src/: counting_alloc.rs  main.rs
encrusted-term-ui/: Cargo.toml
encrusted-term-ui/src/: main.rs  ui_terminal.rs
encrusted-ui/: Cargo.toml
encrusted-ui-no-std/: Cargo.toml
encrusted-ui-no-std/src/: main.rs  malloc_alloc.rs
encrusted-ui/src/: main.rs
src/: buffer.rs  frame.rs  instruction.rs  lib.rs  main.terminal.rs  micro_rng.rs  options.rs  quetzal.rs  traits.rs  ui.rs  ui_terminal.rs  zmachine.rs
term-ui-no-std/: Cargo.toml
term-ui-no-std/src/: main.rs
term-ui-std/: Cargo.toml
term-ui-std/src/: main.rs  ui_terminal.rs
tests/: runtests.sh
