[package]
authors = ["Sterling DeMille <sterlingdemille+github@gmail.com>"]
name = "encrusted"
version = "1.1.0"
description = "A z-machine (interpreter) for Infocom-era text adventure games"
repository = "https://github.com/demille/encrusted"
readme = "README.md"
license = "MIT"
edition = "2018"

[profile.release]
lto = true
opt-level = 's'
panic = "abort"

[profile.dev]
lto = true
opt-level = 's'
panic = "abort" # avoids having to define `eh_personality`

[dependencies]
hashbrown = "0.7.1"

[workspace]
members = ["term-ui-std", "term-ui-no-std"]
