[package]
authors = ["Daniel Prilik <danielprilik@gmail.com>", "Sterling DeMille <sterlingdemille+github@gmail.com>"]
name = "embcrusted"
version = "0.1.0"
edition = "2018"
description = "A `no_std` z-machine interpreter for Infocom-era text adventure games which can run on embedded hardware."
repository = "https://github.com/daniel5151/embcrusted"
readme = "README.md"
license = "MIT"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 'z'
overflow-checks = false
panic = "abort"
rpath = false

[dependencies]

[workspace]
members = ["embcrusted-ui", "embcrusted-ui-no-std"]
